--- a/.github/workflows/hello-ci.yml
+++ b/.github/workflows/hello-ci.yml
@@ -1,3 +1,13 @@
+# name: Greeting Workflow
+# on: [push]
+
+# jobs:
+#   say-hello:
+#     runs-on: ubuntu-latest
+#     steps:
+#       - name: Run a greeting
+#         run: echo "The CI pipeline has successfully started!"
+
 name: Greeting Workflow
 on: [push]
 
@@ -5,5 +15,6 @@ jobs:
   say-hello:
     runs-on: ubuntu-latest
     steps:
-      - name: Run a greeting
-        run: echo "The CI pipeline has successfully started!"
+      - uses: actions/checkout@v4   # Step 1: download your code
+      - name: Run Python Tests       # Step 2: run tests
+        run: python3 test_calc.py
